--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -23,7 +23,7 @@ pynacl>=1.1.2
 pyopenssl>=17.1.0
 pyqrcode>=1.2.1
 pytrie>=0.3
-pyyaml>=3.12
+pyyaml>=4.2b4
 sdnotify>=0.3.1
 service_identity>=17.0.0
 setproctitle>=1.1.10
