--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -1,7 +1,7 @@
 argh==0.26.2
 asn1crypto==0.24.0
 attrs==18.2.0
-autobahn==18.11.2
+autobahn==19.1.1
 Automat==0.7.0
 bitstring==3.1.5
 cbor==1.0.0
@@ -27,22 +27,22 @@ pathtools==0.1.2
 priority==1.3.0
 psutil==5.4.8
 py-ubjson==0.12.0
-pyasn1==0.4.4
-pyasn1-modules==0.2.2
+pyasn1==0.4.5
+pyasn1-modules==0.2.3
 pycparser==2.19
-Pygments==2.3.0
+Pygments==2.3.1
 PyHamcrest==1.9.0
 PyNaCl==1.3.0
 pyOpenSSL==18.0.0
 PyQRCode==1.2.1
 PyTrie==0.3.1
-PyYAML==3.13
-requests==2.20.1
+PyYAML==4.2b4
+requests==2.21.0
 sdnotify==0.3.2
 service-identity==18.1.0
 setproctitle==1.1.10
-setuptools==40.6.2
-six==1.11.0
+setuptools==40.6.3
+six==1.12.0
 sortedcontainers==2.1.0
 treq==18.6.0
 Twisted==18.9.0
